--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1116,45 +1116,7 @@
 
                                       </div>
 
-                                      <div class="row">
-                                        <div class="card-body pb-0 pt-2">
-                                          <div class="ms-2 ps-1 mt-0">
-                                            <div class="d-flex flex-wrap"> <!-- Flex container -->
-                                                <div class="col-md-5 mb-3">
-                                                    <div class="row">
-                                                       
-                                                        <div class="col-md-10 border rounded-3 p-3 me-1">
-                                                            <div class="form-floating">
-                                                                <input type="file" class="form-control" id="photoInput" required>
-                                                                <label for="photoInput">Choose Photo</label>
-                                                            </div>
-                                                            <button id="uploadPhotoBtn" class="btn btn-primary mt-3">Upload Photo</button>
-                                                      
-                                                        </div>
-                                                       
-                                                          
-                                                    </div>
-                                                </div>
-                                                <div class="col-md-5 mb-3 ms-1">
-                                                    <div class="row">
-                                          
-                                                        <div class="col-md-10 border rounded-3 p-3">
-                                                            <div class="form-floating">
-                                                                <input type="file" class="form-control" id="resumeInput" required>
-                                                                <label for="resumeInput">Choose Resume</label>
-                                                            </div>
-                                                            <button id="uploadResumeBtn" class="btn btn-primary mt-3">Upload Resume</button>
-                
-                                                        </div>
-                                                        
-                                                        
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        
-                                        </div>
-                                      </div>
+                                    
                                         <div class="card-body pb-0">
                                             <div class="row" style="display: none;">
                                                 <div class="col-md-6 mb-0">
@@ -1524,7 +1486,30 @@
                                   </div>
                               </div>
                             </div>
-                            
+                            <div class="row container mb-3 justify-content-center">
+                              <div class="card">
+                                  <div class="card-body">
+                                      <h5 class="card-title">Upload Photo</h5>
+                                      <div class="form-floating mb-3">
+                                          <input type="file" class="form-control" id="photoInput" required>
+                                          <label for="photoInput">Choose Photo</label>
+                                      </div>
+                                      <button id="uploadPhotoBtn" class="btn btn-primary">Upload Photo</button>
+                                  </div>
+                              </div>
+                              <div class="card">
+                                  <div class="card-body">
+                                      <h5 class="card-title">Upload Resume</h5>
+                                      <div class="form-floating mb-3">
+                                          <input type="file" class="form-control" id="resumeInput" required>
+                                          <label for="resumeInput">Choose Resume</label>
+                                      </div>
+                                      <button id="uploadResumeBtn" class="btn btn-primary">Upload Resume</button>
+                                  </div>
+                              </div>
+                          </div>
+                          
+                          
                             </div>
                                 
                              
