--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1494,7 +1494,7 @@
                                           <input type="file" class="form-control" id="photoInput" required>
                                           <label for="photoInput">Choose Photo</label>
                                       </div>
-                                      <button id="uploadPhotoBtn" class="btn btn-primary">Upload Photo</button>
+                                      <button id="uploadPhotoBtn" type="submit" class="btn btn-primary">Upload Photo</button>
                                   </div>
                               </div>
                               <div class="card">
@@ -1504,7 +1504,7 @@
                                           <input type="file" class="form-control" id="resumeInput" required>
                                           <label for="resumeInput">Choose Resume</label>
                                       </div>
-                                      <button id="uploadResumeBtn" class="btn btn-primary">Upload Resume</button>
+                                      <button id="uploadResumeBtn" type="submit" class="btn btn-primary">Upload Resume</button>
                                   </div>
                               </div>
                           </div>
