--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1489,22 +1489,26 @@
                             <div class="row container mb-3 justify-content-center">
                               <div class="card">
                                   <div class="card-body">
+                                    <form id="uploadPhotoBtn">
                                       <h5 class="card-title">Upload Photo</h5>
                                       <div class="form-floating mb-3">
                                           <input type="file" class="form-control" id="photoInput" required>
                                           <label for="photoInput">Choose Photo</label>
                                       </div>
-                                      <button id="uploadPhotoBtn" type="submit" class="btn btn-primary">Upload Photo</button>
+                                      <button type="submit" class="btn btn-primary">Upload Photo</button>
+                                    </form>
                                   </div>
                               </div>
                               <div class="card">
                                   <div class="card-body">
+                                    <form id="uploadResumeBtn">
                                       <h5 class="card-title">Upload Resume</h5>
                                       <div class="form-floating mb-3">
                                           <input type="file" class="form-control" id="resumeInput" required>
                                           <label for="resumeInput">Choose Resume</label>
                                       </div>
-                                      <button id="uploadResumeBtn" type="submit" class="btn btn-primary">Upload Resume</button>
+                                      <button type="submit" class="btn btn-primary">Upload Resume</button>
+                                    </form>
                                   </div>
                               </div>
                           </div>
