--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1487,7 +1487,12 @@
                                   </div>
                               </div>
                             </div>
-                            <div id="filesContent" style="display: none;">
+                            <div id="filesContent" class="container-fluid" style="display: none;">
+                              <div class="  p-3">
+                                <h4>Resume and Photo present in Database</h4>
+                                <div id="photosPresent"></div>
+                                <div id="resumesPresent"></div>
+                              </div>
                               <div class="row container mb-3 justify-content-center">
                                 <div class="card">
                                     <div class="card-body">
