--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1291,7 +1291,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                   
+                                <div class="container">
+                                  <div class="row" id="documentCardContainer"></div>
+                                </div>
                                 </div>
                     
                                 <!-- Bank Content -->
