--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1292,7 +1292,7 @@
                                     </div>
                                 </div>
                                 <div class="container">
-                                  <div class="row" id="documentCardContainer"></div>
+                                  <div class="row" id="fileUrlsContainer"></div>
                                 </div>
                                 </div>
                     
