file done and dusted now

--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1292,6 +1292,7 @@
                                     </div>
                                 </div>
                                 <div class="container">
+                                  <h4>Document Urls : </h4>
                                   <div  id="fileUrlsContainer"></div>
                                 </div>
                                 </div>
