--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1293,7 +1293,7 @@
                                 </div>
                                 <div class="container">
                                   <h4>Document Urls : </h4>
-                                  <div id="fileUrlsContainer"></div>
+                                  <div id="urlList"></div>
                                 </div>
                                 </div>
                     
