file done and dusted now finally :) :)

--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -1275,6 +1275,7 @@
                                                             <th scope="col"  style="font-size: 8px;">Issue Date</th>
                                                             <th scope="col"  style="font-size: 8px;">Issue Place</th>
                                                             <th scope="col"  style="font-size: 8px;">Document Files</th>
+                                                            <th scope="col"  style="font-size: 8px;">View Documents</th>
                                                             <th scope="col"  style="font-size: 8px;">STCW</th>
                                                             <th scope="col"  style="font-size: 8px;">Expiry Date</th>
                                                             <!-- Add more columns if needed -->
@@ -1291,11 +1292,11 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="container">
+                               
                                   <h4>Document Urls : </h4>
                                   <div id="urlList"></div>
                                 </div>
-                                </div>
+                                
                     
                                 <!-- Bank Content -->
                                 <div id="bankContent" style="display: none;">
