--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -742,7 +742,7 @@
               <div class="icon-container me-3 ">
                 <i class="bx" id="icon"></i>
             </div>
-              <div class="navbar-nav align-items-center w-100">
+              <div class="navbar-nav  w-100">
 
                 <!-- <div class="nav-item d-flex align-items-center">
                   <button class="btn btn-light border-0 m-0 p-0 " id="search_btn"> <i class="bx bx-search fs-4 lh-0"></i></button>
@@ -761,7 +761,6 @@
 
                  <div class="ms-3" style="display: none;">Done By Sibbenanthan K for Ivistaz (Nov 20th 2023 - May 25th)</div>
               </div>
-              <!-- <button class="btn btn-primary p-0 pe-2 ms-5 ps-2">Daily&nbsp;Dashboard</button> -->
               
               <div class="container-fluid " id="searchresult">
                 <div class="text-center fw-bold ">
@@ -820,7 +819,7 @@
                   </div> -->
                   
                   <div style=''>
-                  <div class="card mt-3"> 
+                  <div class="card mt-4"> 
                     <div class="d-flex justify-content-between p-2 ps-4 pe-4">
                                               <span><a href="./birthday.html">Birthday Reminder</a></span>
                     <span><a href="./reminder-document.html">Renewal Reminder</a></span>
@@ -837,10 +836,15 @@
                      
                     </div>
                    
-                    <div class=" rounded-3  mt-3">
-                      <h4 class="text-dark text-center card p-3 mb-0">Today's Progress <div id="datetime" style="font-size: 14px;" class="text-primary p-3 pb-0"></div></h4>
+                    <div class=" rounded-3 card p-3 mt-4 bg-body-tertiary">
+                      <div class="d-flex justify-content-between">
+                      <h4 class="text-dark  p-3 mb-0">Today's Progress <div id="datetime" style="font-size: 14px;" class="text-primary p-3 ps-0 pb-0"></div></h4>
+                      <span>
+              <a class="btn btn-primary p-0 ps-2 pe-2 mt-4 text-white" href="./daily.html">Daily&nbsp;Dashboard</a></span>
+
+            </div>
                     <div class="row">
-                    <div class="card mt-3 col m-3" >
+                    <div class="card mt-3 col m-3 " >
                       <div class="card-body">
                         <div class="card-title d-flex align-items-start justify-content-between">
                           <div class="avatar flex-shrink-0 me-3">
@@ -857,7 +861,7 @@
                           </div>
                         </div>
                         
-                        <span class="fw-medium d-block mb-1">Todays Calls:</span>
+                        <span class="fw-medium d-block mb-1 ">Todays Calls:</span>
                         <div id="spinnerContainer1">
                           <!-- Spinner 1 will be dynamically inserted here -->
                         
@@ -964,7 +968,7 @@
                       </div>
                     </div>
 
-                    <div class="card mt-3 col ms-0 m-3" >
+                    <div class="card mt- col ms-0 m-3" >
                       <div class="card-body">
                         <div class="card-title d-flex align-items-start justify-content-between">
                           <div class="avatar me-2">
@@ -995,9 +999,9 @@
                     </div>
                     </div>
                     </div>
-                       <div class=" text-center d-flex justify-content-center  ">
+                       <div class=" text-center d-flex justify-content-center mt-4 ">
                         
-                            <div class=" mt-0 bg-white rounded-3 me-3 shadow-sm">
+                            <div class=" mt-0 bg-white rounded-3 me-4 shadow-sm">
                               <h5 class="text-center mt-5 text-dark">Candidate Status <br><br>  </h5>
 
                                 <div class="candidate-status  rounded-3  p-5 pt-0">
@@ -1048,7 +1052,7 @@
                            
                             
                         </div>
-                        <div class="card p-5 text-center mt-3">
+                        <div class="card p-5 text-center mt-4 mb-2">
                          <!-- HTML layout in the client-side -->
 
 <div class="container-fluid">
