--- a/views/public/html/indexpage.html
+++ b/views/public/html/indexpage.html
@@ -29,7 +29,29 @@
   />
   <style>
 
+.skeleton {
+      background: #e0e0e0;
+      height: 20px;
+      margin: 10px 0;
+      width: 100%;
+      animation: pulse 1.5s infinite;
+    }
 
+    .skeleton.round {
+      border-radius: 50%;
+    }
+
+    @keyframes pulse {
+      0% {
+        background-color: #e0e0e0;
+      }
+      50% {
+        background-color: #f0f0f0;
+      }
+      100% {
+        background-color: #e0e0e0;
+      }
+    }
 /* Add spinner styling */
 .spinner-overlay {
   position: fixed;
@@ -772,14 +794,18 @@
               <!-- /Search -->
 
               <span>
-                <a class="dropdown-item" href="#">
+              
+                 
                   <div class="d-flex">
                     <div class="flex-grow-1">
+                      
                       <span class="fw-semibold d-block fw-bolder text-primary" id="user_name"></span>
+                      
                       <small class="text-muted"><span id="user-group"></span></small>
+                      
                     </div>
                   </div>
-                </a>
+               
               </span>
                 </span>
                 <!--/ User -->
@@ -835,10 +861,13 @@
                     </div>
                      
                     </div>
-                   
+
                     <div class=" rounded-3 card p-3 mt-4 bg-body-tertiary">
                       <div class="d-flex justify-content-between">
-                      <h4 class="text-dark  p-3 mb-0">Today's Progress <div id="datetime" style="font-size: 14px;" class="text-primary p-3 ps-0 pb-0"></div></h4>
+                      <h4 class="text-dark  p-3 mb-0">Today's Progress <div id="datetime" style="font-size: 14px;" class="text-primary p-3 ps-0 pb-0"></div>           <div class="skeleton-loading">
+                        <div class="skeleton"></div>
+                        </div>
+                      </h4>
                       <span>
               <a class="btn btn-primary p-0 ps-2 pe-2 mt-4 text-white" href="./daily.html">Daily&nbsp;Dashboard</a></span>
 
@@ -860,17 +889,22 @@
                             </div>
                           </div>
                         </div>
-                        
+
                         <span class="fw-medium d-block mb-1 ">Todays Calls:</span>
                         <div id="spinnerContainer1">
                           <!-- Spinner 1 will be dynamically inserted here -->
                         
                         <h3 class="card-title mb-2">
+                          <div class="skeleton-loading">
+                            <div class="skeleton"></div>
+                            </div>
+
                             <div id="callCount"></div>
                         </h3>
                         <small class="fw-medium">
                             <i id="arrowIcon" class="bx"></i>
                             <span id="percentageChange"></span>
+                            
                         </small></div>
 
                       </div>
@@ -899,6 +933,10 @@
                         <span class="fw-medium d-block mb-1">Proposed:</span>
                         
                         <h3 class="card-title mb-2">
+                          <div class="skeleton-loading">
+                            <div class="skeleton"></div>
+                            </div>
+
                             <div id="proposedCount"></div>
                         </h3>
                         <small class="fw-medium">
@@ -929,6 +967,10 @@
                         
                         <span class="fw-medium d-block mb-1">Approved:</span>
                         <h3 class="card-title mb-2">
+                          <div class="skeleton-loading">
+                            <div class="skeleton"></div>
+                            </div>
+
                             <div id="approvedCount"></div>
                         </h3>
                         <small class="fw-medium">
@@ -958,6 +1000,10 @@
                         
                         <span class="fw-medium d-block mb-1">Joined:</span>
                         <h3 class="card-title mb-2">
+                          <div class="skeleton-loading">
+                            <div class="skeleton"></div>
+                            </div>
+
                             <div id="joinedCount"></div>
                         </h3>
                         <small class="fw-medium">
@@ -987,6 +1033,10 @@
                         
                         <span class="fw-medium d-block mb-1">Rejected:</span>
                         <h3 class="card-title mb-2">
+                          <div class="skeleton-loading">
+                            <div class="skeleton"></div>
+                            </div>
+
                             <div id="rejectedCount"></div>
                         </h3>
                         
@@ -1008,7 +1058,9 @@
                                  
                                     
                                     <div class="mb-0 mt-5">
+                                      
                                       <div class="border border-secondary-subtle rounded-3  pb-0 " >
+                                        
                                           <table class="table  text-center table-border-bottom-0 pb-0 mb-0" >
                                               <thead class="">
                                                   <tr>
@@ -1016,14 +1068,23 @@
                                                       <th scope="col" style="font-size: 8px;" >Inactive</th>
                                                   </tr>
                                               </thead>
+                                              
                                               <tbody>
+                                                
                                                   <tr>
-                                                      <td class=""><span id="activeCount" class=""></span></td>
-                                                      <td ><span id="inactiveCount" class="badge bg-warning text-white " ></span></td>
+                                                      <td class=""><span id="activeCount" class=""></span>                        
+                                                      </td>
+                                                      <td ><span id="inactiveCount" class="badge bg-warning text-white " ></span>                       
+                                                      </td>
                                                   </tr>
                                               </tbody>
                                           </table>
+                                          
                                       </div>
+                                      <div class="skeleton-loading">
+                                        <div class="skeleton"></div>
+                                        </div>
+
                                       
                                   </div>
                                   <!-- <div class=" todays-call border border-secondary-subtle rounded-3 mt-5 pb-0 " >
@@ -1046,6 +1107,17 @@
                             </div>  
                             <div class="card p-5 pb-0 mt-0 pt-4 w-100">
                               <h5 style="margin-top: 21px;margin-bottom: 0px;" class="text-dark">Total available candidates</h5>
+                              <div class="skeleton-loading">
+                                <div class="skeleton w-25"></div>
+
+                                <div class="skeleton mt-5"></div>
+                                <div class="skeleton"></div>
+
+                            
+
+                                </div>
+                              
+
                             <div id="rankCharts" class="pb-3" ></div>
                             </div>
                             
@@ -1060,6 +1132,20 @@
     <div class="col">
     
           <h4 class="card-title " >Discussion Counts</h4>
+          <div class="skeleton-loading">
+       
+
+            <div class="skeleton mt-5"></div>
+            <div class="skeleton"></div>
+
+        
+
+            </div>
+
+
+
+
+
           <p class="text-primary text-end" style="font-size: 10px;margin-top: 0px;padding-top: 0px;">Hover over the Bars to display more details</p>
           <ul id="discussionCounts" class="list-group">
             <!-- Quarter data will be populated here -->
@@ -1069,7 +1155,7 @@
   </div>
 </div>
 
-
+                        </div>
 
 
                         </div>
